# appmana-comfyui-nodes-animatediff-evolved

./: .gitignore  pyproject.toml
animatediff/: nodes.py  nodes_animatelcmi2v.py  nodes_cameractrl.py  nodes_conditioning.py  nodes_deprecated.py  nodes_extras.py  nodes_lora.py  sampling.py  utils_model.py
