[project]
name = "comfyui-animatediff-evolved"
description = "Improved AnimateDiff integration for ComfyUI."
version = "1.2.3"
license = { file = "LICENSE" }
dependencies = [
    "comfyui>=0.2.3"
]

[project.urls]
Repository = "https://github.com/Kosinkadink/ComfyUI-AnimateDiff-Evolved"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "kosinkadink"
DisplayName = "ComfyUI-AnimateDiff-Evolved"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_animatediff_evolved"]
package-dir = { "comfyui_animatediff_evolved" = "." }

[project.entry-points."comfyui.custom_nodes"]
comfyui_animatediff_evolved = "comfyui_animatediff_evolved.animatediff.nodes"
comfyui_impact_pack_web_directory = "comfyui_animatediff_evolved"
